# soax_helper

./: .gitignore  README.md  Untitled.ipynb  auto_contrast_tiffs.py  bead_piv.py  cindy_helper.py  cindy_matrices_from_snakes.py  compiling_things.md  connect_snake_pickles.py  convert_snakes_to_json.py  create_individual_image_soax_param_files.py  create_param_files.py  create_params.py  create_regular_soax_param_files.py  create_soax_param_files.py  crop_tiffs.py  divide_average_image.py  do_bead_PIV.py  do_bead_piv.py  do_bead_piv_.py  do_tube_piv.py  downscale_tif_files.py  flatten_3d_tiffs.py  flatten_3d_tifs.py  intensity_scale_tiffs.py  join_sectioned_snakes.py  json_snake_viewer.py  local_matching.py  make_orientation_fields.py  make_sindy_fields.py  make_snake_images.py  make_video.py  make_videos.py  pad_tif_numbers.py  params.txt  pickle_snakes.py  preprocess_images.py  preprocess_tiffs.py  preprocess_tifs.py  rescale_tiffs.py  (+29 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
ipynb/: Untitled.ipynb
ipynb/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
old_code/: intensity_scale_tiffs.py
ray_matlab_code/: ImagePIV3D.m  example.m  xcorr3fft.m
ray_stuff/: GetPIV3d.m  orientation.py  thicken.py  xcorr2fft.m
sindy_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
snakeutils/: files.py  logger.py  params.py  snakejson.py  tifimage.py
soax_helper/: __init__.py  command_line.py  setup_app.py  tiff_info.py
soax_helper/snakeutils/: tifimage.py
src/: bead_piv.py  run_soax.py  soax_helper.py  view_tubes_and_snakes_together.py
(+47 files in other folders)
