[metadata]
name = soax-helper
version = 0.0.1
author = Paul Kreymborg Dogic Lab
author_email = kreymborg@ucsb.edu
description = Helper for using SOAX to find filaments in images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frenebo/soax_helper
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = soax_helper
packages = find:
python_requires = >=3.6

[options.packages.find]
where = soax_helper

[options.entry_points]
console_scripts =
    soax-helper = bin.soax_helper:main